@@ -52,6 +52,7 @@
 #define MENUDELUNVERSIONED	0x0000000080000000
 #define MENUMERGEALL		0x0000000100000000
 #define MENUPREVDIFF		0x0000000200000000
+#define MENUCLIPPASTE		0x0000000400000000
 
 #define MENUSETTINGS		0x2000000000000000
 #define MENUHELP			0x4000000000000000
@@ -96,5 +97,6 @@ enum FileState
 // #define ITEMIS_SHORTCUT			0x00002000 //unused
 #define ITEMIS_NEEDSLOCK			0x00004000
 #define ITEMIS_PATCHINCLIPBOARD		0x00008000
-#define ITEMIS_TWO					0x00010000
+#define ITEMIS_PATHINCLIPBOARD      0x00010000
+#define ITEMIS_TWO					0x00020000
 
