@@ -129,6 +129,8 @@
 #define IDS_DROPEXPORTMENU              218
 #define IDS_DROPEXPORTEXTENDEDMENU      219
 #define IDS_MENUIGNOREMULTIPLEMASK      220
+#define IDS_MENUCLIPPASTE               225
+#define IDS_MENUDESCCLIPPASTE           226
 #define IDS_ERR_PROPNOTONFILE           230
 #define IDS_MENUIGNOREMULTIPLE          231
 #define IDS_ERR_PROPNOMULTILINE         232
@@ -206,6 +208,7 @@
 #define IDI_PROPERTIES                  5158
 #define IDI_DELUNVERSIONED              5159
 #define IDI_APPSMALL                    5160
+#define IDI_CLIPPASTE                   5164
 #define IDC_LOCKOWNER                   11019
 #define IDC_LOCKDATE                    11020
 #define IDC_EDITPROPERTIES              11021
@@ -220,7 +223,7 @@
 // 
 #ifdef APSTUDIO_INVOKED
 #ifndef APSTUDIO_READONLY_SYMBOLS
-#define _APS_NEXT_RESOURCE_VALUE        5161
+#define _APS_NEXT_RESOURCE_VALUE        5165
 #define _APS_NEXT_COMMAND_VALUE         40001
 #define _APS_NEXT_CONTROL_VALUE         11026
 #define _APS_NEXT_SYMED_VALUE           5101
