@@ -11,6 +11,8 @@
        across sessions. (Stefan)
 - NEW: editing the author in the log dialog is now possible for
        multiple selected revisions. (Stefan)
+- NEW: Paste command to paste copied/cut files from explorer into
+       a working copy. See issue #427 for details. (Stefan)
 - CHG: The bug-ID column width in the log dialog is now limited 
        to 200 pixels. (Stefan)
 - CHG: The right-drag context menu now only shows "Export" if a versioned
